--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "members-only",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=18.13.0"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -8,13 +11,16 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
+    "helmet": "^6.1.2",
     "http-errors": "~1.6.3",
     "luxon": "^3.3.0",
     "mongoose": "^7.0.3",
